# Monopoly

./: .gitignore  CMakeLists.txt  README.md  main.cc
sources/: cards.cc  cards.h  gamecore.cc  gamecore.h  managers.cc  managers.h  player.cc  player.h  spaces.cc  spaces.h
test/: cards_unittest.cc  gamecore_unittest.cc  main_unittest.cc  spaces_unittest.cc
utils/: iomanager.cc  iomanager.h
